# OpenGL-Scene-Manager

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SceneManager/: SceneManager.cpp
